Fix flex gap overflow

--- a/smart-watch-landing-page/src/assets/styles/_components.scss
+++ b/smart-watch-landing-page/src/assets/styles/_components.scss
@@ -61,6 +61,7 @@
   --gap: calc(0.0625rem * #{$size});
 
   margin: calc(-1 * var(--gap));
+  overflow: hidden;
   & > * {
     margin: var(--gap);
   }
